--- a/index.html
+++ b/index.html
@@ -13,18 +13,70 @@
 </head>
 <body>
     <header>
-        HEADER
+        <div class="container">
+            Header
+        </div>
     </header>
 
-    <div>
-        HERO
-    </div>
+    <section class="hero">
+        <div class="container">
+            Hero
+        </div>
+    </section>
 
-    <div>
-        CLIENTS LOGO LIST
-    </div>
+    <section class="details">
+        <div class="container">
+            Details
+        </div>
+    </section>
 
+    <section class="services">
+        <div class="container">
+            Services
+        </div>
+    </section>
 
+    <section class="facts">
+        <div class="container">
+            Facts
+        </div>
+    </section>
+
+    <section class="projects">
+        <div class="container">
+            Projects
+        </div>
+    </section>
+
+    <section class="feedback">
+        <div class="container">
+            Feedback
+        </div>
+    </section>
+
+    <section class="plans">
+        <div class="container">
+            Plans
+        </div>
+    </section>
+
+    <section class="posts">
+        <div class="container">
+            Posts
+        </div>
+    </section>
+
+    <section class="brands">
+        <div class="container">
+            Brands
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            Footer
+        </div>
+    </footer>
 
     <script src="./js/data.js"></script>
     <script src="./js/functions.js"></script>
