--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/button.css">
-    <link rel="stylesheet" href="./css/form.css">
-    <link rel="stylesheet" href="./css/gallery.css">
+    <title>Personal Portfolio | Philip Gilbert</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/variables.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
         </div>
     </header>
 
-    <section class="hero">
+    <section class="hero bg-color-light">
         <div class="container">
             Hero
         </div>
@@ -48,7 +48,7 @@
         </div>
     </section>
 
-    <section class="feedback">
+    <section class="feedback bg-color-light">
         <div class="container">
             Feedback
         </div>
@@ -60,7 +60,7 @@
         </div>
     </section>
 
-    <section class="posts">
+    <section class="posts bg-color-light">
         <div class="container">
             Posts
         </div>
