--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/variables.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/button.css">
 </head>
 <body>
     <header>
@@ -20,7 +21,18 @@
 
     <section class="hero bg-color-light">
         <div class="container">
-            Hero
+            <div class="row flex row-center">
+                <div class="col-6">
+                    <h6 class="text-uppercase">This is me</h6>
+                    <h1 class="text-uppercase">Philip Gilbert</h1>
+                    <p>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge
+                    some different futures.</p>
+                    <a class="btn bg-gradient-blue text-uppercase" href="#">Discover now</a>
+                </div>
+                <div class="col-6 hidden-sm sm-first">
+                    <img class="sm-half-size" src="./img/hero-img.png" alt="Philip Gilbert hero">
+                </div>
+            </div>
         </div>
     </section>
 
