Personal details section #7

--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
 
     <section class="details">
         <div class="container">
-            Details
+            <div class="row flex row-center">
+                <div class="col-6">
+                    <img src="./img/about-img.png" alt="About image">
+                </div>
+                <div class="col-6">
+                    <h6 class="text-uppercase">About me</h6>
+                    <h2 class="text-uppercase">Personal details</h2>
+                    <p>Here, I focus on a range of items and features that we use in life without giving them a second thought. such as Coca Cola. Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                    <a class="btn text-uppercase bg-gradient-blue" href="#">View full details</a>
+                </div>
+            </div>
         </div>
     </section>
 
