--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/variables.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/button.css">
+    <link rel="stylesheet" href="./css/facts.css">
 </head>
 <body>
     <header>
@@ -58,9 +59,26 @@
         </div>
     </section>
 
-    <section class="facts">
+    <section class="facts bg-gradient-blue">
         <div class="container">
-            Facts
+            <div class="row flex row-center">
+                <div class="col-4">
+                    <h4>2536</h4>
+                    <p>Project Completed</p>
+                </div>
+                <div class="col-4">
+                    <h4>6784</h4>
+                    <p>Happy Clients</p>
+                </div>
+                <div class="col-4">
+                    <h4>2239</h4>
+                    <p>Cups of Coffee</p>
+                </div>
+                <div class="col-4">
+                    <h4>434</h4>
+                    <p>Real Professionals</p>
+                </div>
+            </div>
         </div>
     </section>
 
