Blog posts section #13

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/services.css">
     <link rel="stylesheet" href="./css/facts.css">
     <link rel="stylesheet" href="./css/plans.css">
+    <link rel="stylesheet" href="./css/blog.css">
 </head>
 <body>
     <header>
@@ -220,13 +221,13 @@
 
     <section class="plans">
         <div class="container">
-            <div class="row flex row-center">
+            <div class="row text-center">
                 <div class="col">
                     <h2>Choose Your Plan</h2>
                     <p>When someone does something that they know that they shouldn't do, did they.</p>
                 </div>
             </div>
-            <div class="row flex row-center">
+            <div class="row flex text-center">
                 <div class="col-3">
                     <h3>01</h3>
                     <h4>Economy</h4>
@@ -243,7 +244,7 @@
                     <p>For the individuals</p>
                     <p>Secure Online Transfer</p>
                     <p>Unlimited Styles for interface</p>
-                    <p>Reliable Customer Service</p>                   
+                    <p>Reliable Customer Service</p>
                     <h6>£299.00</h6>
                     <a class="text-uppercase" href="#">Buy now</a>
                 </div>
@@ -253,7 +254,7 @@
                     <p>For the individuals</p>
                     <p>Secure Online Transfer</p>
                     <p>Unlimited Styles for interface</p>
-                    <p>Reliable Customer Service</p>                   
+                    <p>Reliable Customer Service</p>
                     <h6>£399.00</h6>
                     <a class="text-uppercase" href="#">Buy now</a>
                 </div>
@@ -263,7 +264,7 @@
                     <p>For the individuals</p>
                     <p>Secure Online Transfer</p>
                     <p>Unlimited Styles for interface</p>
-                    <p>Reliable Customer Service</p>                   
+                    <p>Reliable Customer Service</p>
                     <h6>£499.00</h6>
                     <a class="text-uppercase" href="#">Buy now</a>
                 </div>
@@ -273,7 +274,105 @@
 
     <section class="posts bg-color-light">
         <div class="container">
-            Posts
+            <div class="row">
+                <div class="col text-center">
+                    <h2>Latest posts from our blog</h2>
+                    <p>You may be a skillful, effective employer but if you don’t trust your personnel and the opposite, then the
+                        chances of
+                        improving and expanding the business</p>
+                </div>
+            </div>
+
+            <div class="row flex">
+                <div class="col-4">
+                    <div class="row photo">
+                        <img src="./img/blog/1.jpg" Blog post photo">
+                    </div>
+                    <div class="row flex post-info">
+                        <div class="col flex row-center person">
+                            <img src="./img/user/user.png" alt="User photo">
+                            <a href="">Mark Wiens</a>
+                        </div>
+                        <div class="col flex row-center meta">
+                            <p>24th Sep</p>
+                            <span>
+                                <i class="lnr lnr-heart"></i>
+                                15
+                            </span>
+                            <span>
+                                <i class="lnr lnr-bubble"></i>
+                                4
+                            </span>
+                        </div>
+                    </div>
+                    <div class="row post">
+                        <a href="#">
+                            <h4>Break through self doubt and fear</h4>
+                        </a>
+                        <p>Dream interpretation has many forms; it can be done be done for the sake of fun, hobby or can be taken up
+                            as a serious
+                            career.</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="row photo">
+                        <img src="./img/blog/2.jpg" alt="Blog post photo">
+                    </div>
+                    <div class="row flex post-info">
+                        <div class="col flex row-center person">
+                            <img src="./img/user/user.png" alt="User photo">
+                            <a href="">Mark Wiens</a>
+                        </div>
+                        <div class="col flex row-center meta">
+                            <p>24th Sep</p>
+                            <span>
+                                <i class="lnr lnr-heart"></i>
+                                15
+                            </span>
+                            <span>
+                                <i class="lnr lnr-bubble"></i>
+                                4
+                            </span>
+                        </div>
+                    </div>
+                    <div class="row post">
+                        <a href="#">
+                            <h4>Portable fashion for young women</h4>
+                        </a>
+                        <p>You may be a skillful, effective employer but if you don’t trust your personnel and the opposite, then the chances of
+                        improving.</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="row photo">
+                        <img src="./img/blog/3.jpg" alt="Blog post photo">
+                    </div>
+                    <div class="row flex post-info">
+                        <div class="col flex row-center person">
+                            <img src="./img/user/user.png" alt="User photo">
+                            <a href="">Mark Wiens</a>
+                        </div>
+                        <div class="col flex row-center meta">
+                            <p>24th Sep</p>
+                            <span>
+                                <i class="lnr lnr-heart"></i>
+                                15
+                            </span>
+                            <span>
+                                <i class="lnr lnr-bubble"></i>
+                                4
+                            </span>
+                        </div>
+                    </div>
+                    <div class="row post">
+                        <a href="#">
+                            <h4>Do dreams serve as a premonition</h4>
+                        </a>
+                        <p>So many of us are demotivated to achieve anything. Such people are not enthusiastic about anything. They don’t want to
+                        work involved.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
