--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./css/facts.css">
     <link rel="stylesheet" href="./css/plans.css">
     <link rel="stylesheet" href="./css/blog.css">
+    <link rel="stylesheet" href="./css/brands.css">
 </head>
 <body>
     <header>
@@ -376,9 +377,25 @@
         </div>
     </section>
 
-    <section class="brands">
+    <section class="brands bg-gradient-blue">
         <div class="container">
-            Brands
+            <div class="row flex space-around">
+                <div class="col">
+                    <a href="#"><img src="./img/brands/1.png" alt=""></a>
+                </div>
+                <div class="col">
+                    <a href="#"><img src="./img/brands/2.png" alt=""></a>
+                </div>
+                <div class="col">
+                    <a href="#"><img src="./img/brands/3.png" alt=""></a>
+                </div>
+                <div class="col">
+                    <a href="#"><img src="./img/brands/4.png" alt=""></a>
+                </div>
+                <div class="col">
+                    <a href="#"><img src="./img/brands/5.png" alt=""></a>
+                </div>
+            </div>
         </div>
     </section>
 
