--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./css/plans.css">
     <link rel="stylesheet" href="./css/blog.css">
     <link rel="stylesheet" href="./css/brands.css">
+    <link rel="stylesheet" href="./css/projects.css">
 </head>
 <body>
     <header>
@@ -210,7 +211,71 @@
 
     <section class="projects">
         <div class="container">
-            Projects
+            <div class="row">
+                <div class="col text-center">
+                    <h2>Our latest featured projects</h2>
+                    <p>Who are in extremely love with eco friendly system.</p>
+                </div>
+            </div>
+            <div class="row text-center project-categories">
+                <div class="col">
+                    <a href="#" class="active">All</a>
+                    <a href="#">Vector</a>
+                    <a href="#">Raster</a>
+                    <a href="#">Ui/ux</a>
+                    <a href="#">Printing</a>
+                </div>
+            </div>
+            <div class="row flex text-center">
+                <div class="col-4">
+                    <div class="project-photo">
+                        <div class="overlay"></div>
+                        <img src="./img/gallery/p1.jpg" alt="Project image">
+                    </div>
+                    <h4>2D vinyl design</h4>
+                    <div class="project-category">vector</div>
+                </div>
+                <div class="col-4">
+                    <div class="project-photo">
+                        <div class="overlay"></div>
+                        <img src="./img/gallery/p2.jpg" alt="Project image">
+                    </div>
+                    <h4>2D vinyl design</h4>
+                    <div class="project-category">vector</div>
+                </div>
+                <div class="col-4">
+                    <div class="project-photo">
+                        <div class="overlay"></div>
+                        <img src="./img/gallery/p3.jpg" alt="Project image">
+                    </div>
+                    <h4>Creative poster design</h4>
+                    <div class="project-category">Agency</div>
+                </div>
+                <div class="col-4">
+                    <div class="project-photo">
+                        <div class="overlay"></div>
+                        <img src="./img/gallery/p4.jpg" alt="Project image">
+                    </div>
+                    <h4>Embosed logo design</h4>
+                    <div class="project-category">portal</div>
+                </div>
+                <div class="col-4">
+                    <div class="project-photo">
+                        <div class="overlay"></div>
+                        <img src="./img/gallery/p5.jpg" alt="Project image">
+                    </div>
+                    <h4>3D helmet design</h4>
+                    <div class="project-category">vector</div>
+                </div>
+                <div class="col-4">
+                    <div class="project-photo">
+                        <div class="overlay"></div>
+                        <img src="./img/gallery/p6.jpg" alt="Project image">
+                    </div>
+                    <h4>2D vinyl design</h4>
+                    <div class="project-category">raster</div>
+                </div>
+            </div>
         </div>
     </section>
 
