--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/services.css">
     <link rel="stylesheet" href="./css/facts.css">
     <link rel="stylesheet" href="./css/plans.css">
+    <link rel="stylesheet" href="./css/feedback.css">
 </head>
 <body>
     <header>
@@ -214,19 +215,72 @@
 
     <section class="feedback bg-color-light">
         <div class="container">
-            Feedback
+            <div class="row">
+                <div class="col text-center">
+                   <h2>Client’s Feedback About Me</h2>
+                   <p>It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or even a person.</p> 
+                </div>
+            </div>
+            <div class="row flex row-center">
+                <div class="col-6 flex row-center">
+                    <img src="./img/user/user1.png" alt="User photo">
+                    <div>
+                        <p class="feedback-text">
+                            Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills, the bigger the payoff you.</p>
+                        <h4>Harriet Maxwell</h4>
+                        <p>CEO at Google</p>
+                    </div>
+                </div>
+                <div class="col-6 flex row-center">
+                   <img src="./img/user/user2.png" alt="User photo">
+                    <div>
+                        <p class="feedback-text">
+                            A purpose is the eternal condition for success. Every former smoker can tell you just how hard it is to stop smoking cigarettes. However.</p>
+                        <h4>Carolyn Craig</h4>
+                        <p>CEO at Facebook</p>
+                    </div>
+                </div>
+                <div class="feedback-btn text-center">
+                    <div class="btn-left lnr lnr-arrow-left">
+                    </div>
+                    <div class="btn-right lnr lnr-arrow-right">
+                    </div>
+                </div>
+                <!-- <div class="col-6 flex row-center">
+                    <div class="row">
+                        <img src="./img/user/user1.png" alt="User photo">
+                    </div>
+                    <div class="row">
+                        <p class="feedback-text">
+                            Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills, the bigger the payoff you.</p>
+                        <h4>Harriet Maxwell</h4>
+                        <p>CEO at Google</p>
+                    </div>
+                </div>
+                <div class="col-6 flex row-center">
+                    <div class="row">
+                        <img src="./img/user/user2.png" alt="User photo">
+                    </div>
+                    <div class="row">
+                        <p class="feedback-text">
+                            A purpose is the eternal condition for success. Every former smoker can tell you just how hard it is to stop smoking cigarettes. However.</p>
+                        <h4>Carolyn Craig</h4>
+                        <p>CEO at Facebook</p>
+                    </div>
+                </div> -->
+            </div>
         </div>
     </section>
 
     <section class="plans">
         <div class="container">
-            <div class="row flex row-center">
-                <div class="col">
+            <div class="row">
+                <div class="col text-center">
                     <h2>Choose Your Plan</h2>
                     <p>When someone does something that they know that they shouldn't do, did they.</p>
                 </div>
             </div>
-            <div class="row flex row-center">
+            <div class="row flex text-center">
                 <div class="col-3">
                     <h3>01</h3>
                     <h4>Economy</h4>
