--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/services.css">
     <link rel="stylesheet" href="./css/facts.css">
     <link rel="stylesheet" href="./css/plans.css">
-    <link rel="stylesheet" href="./css/feedback.css">
+    <link rel="stylesheet" href="./css/feedbacks.css">
 </head>
 <body>
     <header>
@@ -213,61 +213,53 @@
         </div>
     </section>
 
-    <section class="feedback bg-color-light">
+    <section class="feedbacks bg-color-light">
         <div class="container">
             <div class="row">
                 <div class="col text-center">
                    <h2>Client’s Feedback About Me</h2>
-                   <p>It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or even a person.</p> 
+                   <p>It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or even a person.</p>
                 </div>
             </div>
-            <div class="row flex row-center">
-                <div class="col-6 flex row-center">
-                    <img src="./img/user/user1.png" alt="User photo">
-                    <div>
-                        <p class="feedback-text">
-                            Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills, the bigger the payoff you.</p>
-                        <h4>Harriet Maxwell</h4>
-                        <p>CEO at Google</p>
+            <div class="row flex row-center feeds">
+                <div class="col-6 flex feed">
+                    <div class="row">
+                        <div class="col">
+                            <img src="./img/user/user1.png" alt="User photo">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <p>Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving
+                                your
+                                skills, the bigger the payoff you.</p>
+                            <h4>Harriet Maxwell</h4>
+                            <p>CEO at Google</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-6 flex row-center">
-                   <img src="./img/user/user2.png" alt="User photo">
-                    <div>
-                        <p class="feedback-text">
-                            A purpose is the eternal condition for success. Every former smoker can tell you just how hard it is to stop smoking cigarettes. However.</p>
-                        <h4>Carolyn Craig</h4>
-                        <p>CEO at Facebook</p>
+                <div class="col-6 flex feed">
+                    <div class="row">
+                        <div class="col">
+                            <img src="./img/user/user2.png" alt="User photo">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <p>A purpose is the eternal condition for success. Every former smoker can tell you just how hard it is to stop smoking
+                                cigarettes. However.</p>
+                            <h4>Carolyn Craig</h4>
+                            <p>CEO at Facebook</p>
+                        </div>
                     </div>
                 </div>
-                <div class="feedback-btn text-center">
+
+                <div class="feedback-btn">
                     <div class="btn-left lnr lnr-arrow-left">
                     </div>
                     <div class="btn-right lnr lnr-arrow-right">
                     </div>
                 </div>
-                <!-- <div class="col-6 flex row-center">
-                    <div class="row">
-                        <img src="./img/user/user1.png" alt="User photo">
-                    </div>
-                    <div class="row">
-                        <p class="feedback-text">
-                            Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills, the bigger the payoff you.</p>
-                        <h4>Harriet Maxwell</h4>
-                        <p>CEO at Google</p>
-                    </div>
-                </div>
-                <div class="col-6 flex row-center">
-                    <div class="row">
-                        <img src="./img/user/user2.png" alt="User photo">
-                    </div>
-                    <div class="row">
-                        <p class="feedback-text">
-                            A purpose is the eternal condition for success. Every former smoker can tell you just how hard it is to stop smoking cigarettes. However.</p>
-                        <h4>Carolyn Craig</h4>
-                        <p>CEO at Facebook</p>
-                    </div>
-                </div> -->
             </div>
         </div>
     </section>
@@ -297,7 +289,7 @@
                     <p>For the individuals</p>
                     <p>Secure Online Transfer</p>
                     <p>Unlimited Styles for interface</p>
-                    <p>Reliable Customer Service</p>                   
+                    <p>Reliable Customer Service</p>
                     <h6>£299.00</h6>
                     <a class="text-uppercase" href="#">Buy now</a>
                 </div>
@@ -307,7 +299,7 @@
                     <p>For the individuals</p>
                     <p>Secure Online Transfer</p>
                     <p>Unlimited Styles for interface</p>
-                    <p>Reliable Customer Service</p>                   
+                    <p>Reliable Customer Service</p>
                     <h6>£399.00</h6>
                     <a class="text-uppercase" href="#">Buy now</a>
                 </div>
@@ -317,7 +309,7 @@
                     <p>For the individuals</p>
                     <p>Secure Online Transfer</p>
                     <p>Unlimited Styles for interface</p>
-                    <p>Reliable Customer Service</p>                   
+                    <p>Reliable Customer Service</p>
                     <h6>£499.00</h6>
                     <a class="text-uppercase" href="#">Buy now</a>
                 </div>
