--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Personal Portfolio | Philip Gilbert</title>
 
+    <link rel="icon" href="./img/ico.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
@@ -32,61 +33,7 @@
                     <img src="./img/logo.png" alt="Personal portfolio logo">
                 </div>
                 <div class="col hidden-md">
-                    <nav>
-                        <ul class="flex">
-                            <li>
-                                <a class="active" href="#">Home</a>
-                            </li>
-                            <li>
-                                <a href="#">About</a>
-                            </li>
-                            <li>
-                                <a href="#">Services</a>
-                            </li>
-                            <li>
-                                <a href="#">Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="#">Pricing</a>
-                            </li>
-                            <li class="has-dropdown">
-                                <a class="with-dropdown" href="#">Blog</a>
-                                <!-- <ul>
-                                    <li>
-                                        <a href="#">Blog home</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Blog single</a>
-                                    </li>
-                                </ul> -->
-                            </li>
-                            <li class="has-dropdown">
-                                <a class="with-dropdown" href="#">Pages</a>
-                                <!-- <ul>
-                                    <li>
-                                        <a href="#">Elements</a>
-                                    </li>
-                                    <li class="has-dropdown2">
-                                        <a class="with-dropdown2" href="#">Level 2</a>
-                                        <ul>
-                                            <li>
-                                                <a href="#">Item one</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Item two</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul> -->
-                            </li>
-                            <li>
-                                <a href="#">Contact</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="col hidden">
-                    <i class="lnr lnr-menu"></i>
+                    <nav></nav>
                 </div>
             </div>
         </div>
@@ -541,59 +488,9 @@
         </div>
     </footer>
 
-    <!-- <div class="mobile-overlay"></div>
-    <nav class="mobile-nav">
-        <ul>
-            <li>
-                <a href="#">Home</a>
-            </li>
-            <li>
-                <a href="#">About</a>
-            </li>
-            <li>
-                <a href="#">Services</a>
-            </li>
-            <li>
-                <a href="#">Portfolio</a>
-            </li>
-            <li>
-                <a href="#">Pricing</a>
-            </li>
-            <li>
-                <a class="with-list" href="#">Blog</a>
-                <ul>
-                    <li>
-                        <a href="#">Blog home</a>
-                    </li>
-                    <li>
-                        <a href="#">Blog single</a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a class="with-list" href="#">Pages</a>
-                <ul>
-                    <li>
-                        <a href="#">Elements</a>
-                    </li>
-                    <li>
-                        <a class="with-list" href="#">Level 2</a>
-                        <ul>
-                            <li>
-                                <a href="#">Item one</a>
-                            </li>
-                            <li>
-                                <a href="#">Item two</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">Contact</a>
-            </li>
-        </ul>
-    </nav> -->
+    <div class="mobile-overlay"></div>
+    <nav class="mobile-nav"></nav>
+    <i class="lnr lnr-menu hidden"></i>
 
     <script src="./js/data.js"></script>
     <script src="./js/functions.js"></script>
