--- a/index.html
+++ b/index.html
@@ -80,58 +80,7 @@
                     <p>At about this time of year, some months after New Year’s resolutions have been made and kept, or made and neglected.</p>
                 </div>
             </div>
-            <div class="row flex text-center">
-                <div class="col-4">
-                    <div class="service">
-                        <i class="lnr lnr-pie-chart"></i>
-                        <h3>Web design</h3>
-                        <p>“It is not because things are difficult that we do not dare; it is because we do not dare that they are
-                            difficult.”</p>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="service">
-                        <i class="lnr lnr-laptop-phone"></i>
-                        <h3>Web development</h3>
-                        <p>If you are an entrepreneur, you know that your success cannot depend on the opinions of others. Like the wind,
-                            opinions.</p>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="service">
-                        <i class="lnr lnr-camera"></i>
-                        <h3>Photography</h3>
-                        <p>Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving
-                            your
-                            skills.</p>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="service">
-                        <i class="lnr lnr-picture"></i>
-                        <h3>Clipping Path</h3>
-                        <p>Hypnosis quit smoking methods maintain caused quite a stir in the medical world over the last two decades. There is a
-                            lot of argument.</p>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="service">
-                        <i class="lnr lnr-tablet"></i>
-                        <h3>Apps interface</h3>
-                        <p>Do you sometimes have the feeling that you’re running into the same obstacles over and over again? Many of my
-                            conflicts.</p>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="service">
-                        <i class="lnr lnr-rocket"></i>
-                        <h3>Graphic design</h3>
-                        <p>You’ve heard the expression, “Just believe it and it will come.” Well, technically, that is true, however,
-                            ‘believing’
-                            is not just thinking that.</p>
-                    </div>
-                </div>
-            </div>
+            <div class="row flex text-center"></div>
         </div>
     </section>
 
